// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editConfig({}, { hasYarn: false }) 1`] = `
Object {
  "before_script": Array [
    "apt-get update -qq",
    "apt-get install -qy libelf1",
    "npm install --global npm",
    "npm install",
  ],
  "test": Object {
    "image": "node:8",
    "script": Array [
      "npm test",
    ],
  },
}
`;

exports[`editConfig({}, { hasYarn: true }) 1`] = `
Object {
  "before_script": Array [
    "apt-get update -qq",
    "apt-get install -qy libelf1",
    "npm install --global npm",
    "npm install --global yarn",
    "npm install",
  ],
  "test": Object {
    "image": "node:8",
    "script": Array [
      "npm test",
    ],
  },
}
`;
